--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ahmed Karem Mousa Personal Website" />
+    <meta name="keywords" content="Ahmed, Karem, Mousa" />
+    <meta name="author" content="AhmedKaermMousa" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://AhmedKaremMousa.com/" />
+    <meta property="og:title" content="Ahmed Karem Mousa" />
+    <meta
+      property="og:description"
+      content="Ahmed Karem Mousa Personal Website"
+    />
+    <meta property="og:image" content="/my-picture.svg" />
+
+    <!-- LinkedIn -->
+    <meta property="og:site_name" content="Ahmed Karem Mousa" />
+    <meta property="og:url" content="https://AhmedKaremMousa.com/" />
+    <meta property="og:title" content="Ahmed Karem Mousa" />
+    <meta
+      property="og:description"
+      content="Ahmed Karem Mousa Personal Website"
+    />
+    <meta property="og:image" content="/my-picture.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://AhmedKaremMousa.com/" />
+    <meta property="twitter:title" content="Ahmed Karem Mousa" />
+    <meta
+      property="twitter:description"
+      content="Ahmed Karem Mousa Personal Website"
+    />
+    <meta property="twitter:image" content="/my-picture.svg" />
+
     <link rel="icon" type="image/svg+xml" href="/my-picture.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap"
       rel="stylesheet"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahmed Karem Mousa</title>
   </head>
   <body>
